--- a/app/layouts/partials/footer.html
+++ b/app/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <footer
-    class="bg-dark-tar border-t border-dark-coal mt-1 px-8 py-1 text-shadow-dark w-full lg:px-48"
+    class="bg-dark-tar border-t border-dark-coal mt-1 py-1 text-shadow-dark text-xs w-full sm:text-sm"
     role="contentinfo"
     >
-    <div class="text-xs sm:min-w-page sm:text-sm">
+    <div class="mixin:page-layout">
         <p class="leading-snug my-2 text-purple sm:mb-0">
             &copy; 2017 - 2019 David Timmons. All rights reserved.
         </p>
