--- a/app/layouts/site-map.html
+++ b/app/layouts/site-map.html
@@ -8,51 +8,55 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-        <div class="sm:min-w-page">
-            {{> header }}
-        </div>
+        {{> header }}
 
         <main
             class="mt-16 mb-8"
             role="main"
             >
             <section>
-                <div class="bg-dark-tar border-b border-t border-dark-coal my-1 px-8 lg:px-48">
-                    <h1 class="font-bold font-mono leading-none lowercase my-2 select-none text-4xl text-aqua tracking-wide">
-                        {{ title }}
-                    </h1>
+                <div class="bg-dark-tar border-b border-t border-dark-coal my-1">
+                    <div class="mixin:page-layout">
+                        <h1 class="font-bold font-mono leading-none lowercase my-2 select-none text-4xl text-aqua tracking-wide">
+                            {{ title }}
+                        </h1>
+                    </div>
                 </div>
 
-                <article class="px-8 text-shadow-darker lg:px-48">
+                <article class="text-shadow-darker">
+                    <div class="mixin:page-layout">
 
-                    <!-- site pages -->
-                    <div class="mt-8">
-                        <h2 class="leading-snug mixin:text-headline">
-                            {{ collections.pages.metadata.title }}:
-                        </h2>
-                        <ul>
-                        {{#each collections.pages}}
-                            <li>
-                                <a href="{{ @root.buildPath }}{{ this.slug }}">{{ title }}</a>
-                            </li>
-                        {{/each}}
-                        </ul>
+                        <!-- site pages -->
+                        <div class="mt-8">
+                            <h2 class="leading-snug mixin:text-headline">
+                                {{ collections.pages.metadata.title }}:
+                            </h2>
+                            <ul>
+                            {{#each collections.pages}}
+                                <li>
+                                    <a href="{{ @root.buildPath }}{{ this.slug }}">{{ title }}</a>
+                                </li>
+                            {{/each}}
+                            </ul>
+                        </div>
+
+                        <!-- site posts -->
+                        <div class="mt-8">
+                            <h2 class="leading-snug mixin:text-headline">
+                                {{ collections.articles.metadata.title }}:
+                            </h2>
+                            <ul>
+                            {{#each collections.articles}}
+                                <li>
+                                    <a href="{{ @root.buildPath }}{{ this.path }}">
+                                        {{ title }}
+                                    </a>
+                                </li>
+                            {{/each}}
+                            </ul>
+                        </div>
+
                     </div>
-
-                    <!-- site posts -->
-                    <div class="mt-8">
-                        <h2 class="leading-snug mixin:text-headline">
-                            {{ collections.articles.metadata.title }}:
-                        </h2>
-                        <ul>
-                        {{#each collections.articles}}
-                            <li>
-                                <a href="{{ @root.buildPath }}{{ this.path }}">{{ title }}</a>
-                            </li>
-                        {{/each}}
-                        </ul>
-                    </div>
-
                 </article>
             </section>
         </main>
