--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -421,6 +421,11 @@ input::-webkit-input-placeholder {
   opacity: 0.5;
 }
 
+input::-moz-placeholder {
+  color: inherit;
+  opacity: 0.5;
+}
+
 input:-ms-input-placeholder {
   color: inherit;
   opacity: 0.5;
@@ -707,6 +712,10 @@ video {
   height: 100vh;
 }
 
+.h-2\/5w {
+  height: 40vw;
+}
+
 .h-r4 {
   height: 1em;
 }
@@ -756,6 +765,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mt-0 {
   margin-top: 0;
 }
@@ -796,6 +810,10 @@ video {
   margin-top: 1rem;
 }
 
+.mr-4 {
+  margin-right: 1rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -810,6 +828,10 @@ video {
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
 }
 
 .mt-8 {
@@ -836,8 +858,16 @@ video {
   margin-left: -1.5rem;
 }
 
-.overflow-hidden {
-  overflow: hidden;
+.max-h-hero {
+  max-height: 22rem;
+}
+
+.max-w-2xl {
+  max-width: 42rem;
+}
+
+.max-w-page {
+  max-width: 1150px;
 }
 
 .p-6 {
@@ -862,11 +892,6 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .pb-2 {
@@ -974,12 +999,12 @@ video {
   font-size: 2.25rem;
 }
 
-.text-r5xl {
-  font-size: 3em;
+.text-3\/5 {
+  font-size: 60%;
 }
 
-.text-2\/3 {
-  font-size: 66%;
+.text-r5xl {
+  font-size: 3em;
 }
 
 .italic {
@@ -1110,6 +1135,22 @@ a { text-decoration: none; color: #6dc9c7;
 a:hover { color: #782f92;
 }
 
+.article #contents h1,
+.article #contents h2,
+.article #contents h3 {
+  display: block;
+  font-weight: 700;
+  text-transform: lowercase;
+  margin-top: -0.5rem;
+  color: #782f92;
+  letter-spacing: 0.05em;
+  border-bottom-width: 1px;
+  border-color: #383838;
+  line-height: 1.375;
+  margin-top: 1.5rem;
+  font-size: 1.5rem;
+}
+
 /* Utilities */
 
 .bg-clear-dark { background-color: rgba(0, 0, 0, 0.5);
@@ -1119,6 +1160,11 @@ a:hover { color: #782f92;
 }
 
 .bg-img-portrait { background-image: url("/static/images/david-timmons.jpg");
+}
+
+/* .filter-shadow-dark { filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.08)); } */
+
+.mixin\:page-layout { max-width: 1150px; margin-left: auto; margin-right: auto; padding-left: 1.5rem; padding-right: 1.5rem;
 }
 
 .mixin\:text-headline { display: block; font-weight: 700; text-transform: lowercase; margin-top: -0.5rem; color: #782f92; letter-spacing: 0.05em;
@@ -1135,6 +1181,16 @@ a:hover { color: #782f92;
 
 .bg-img-pattern { background-image: url("/static/images/timmons-logo-pattern.png");
 }
+
+/* .col-count-2 { column-count: 2; } */
+
+/* .col-gap-sm { column-gap: 3rem; } */
+
+/* .clip-none { clip-path: none; } */
+
+/* .clip-circle { clip-path: circle(50% at 50% 50%); } */
+
+/* .shape-parallelogram { shape-outside: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%); } */
 
 ul.list-custom-clear-light li::before { color: rgba(255, 255, 255, 0.55);
 }
@@ -1163,82 +1219,82 @@ ul.list-custom-inline li + li::before {
 /* Animations */
 
 @-webkit-keyframes cursor-blink {
-  50% { border-right-width: 0px;
+  from { border-right-width: 0px;
   }
 
-  100% { border-right-width: 1px;
+  to   { border-right-width: 1px;
   }
 }
 
 @keyframes cursor-blink {
-  50% { border-right-width: 0px;
+  from { border-right-width: 0px;
   }
 
-  100% { border-right-width: 1px;
+  to   { border-right-width: 1px;
   }
 }
 
 @-webkit-keyframes heartbeat {
-  50% { -webkit-transform: scale(1.04); transform: scale(1.04);
+  50% { transform: scale(1.04);
   }
 
-  100% { -webkit-transform: scale(1.0); transform: scale(1.0);
+  100% { transform: scale(1.0);
   }
 }
 
 @keyframes heartbeat {
-  50% { -webkit-transform: scale(1.04); transform: scale(1.04);
+  50% { transform: scale(1.04);
   }
 
-  100% { -webkit-transform: scale(1.0); transform: scale(1.0);
+  100% { transform: scale(1.0);
   }
 }
 
 @-webkit-keyframes heartbeat-lg {
-  50% { -webkit-transform: scale(1.1); transform: scale(1.1);
+  50% { transform: scale(1.1);
   }
 
-  100% { -webkit-transform: scale(1.0); transform: scale(1.0);
+  100% { transform: scale(1.0);
   }
 }
 
 @keyframes heartbeat-lg {
-  50% { -webkit-transform: scale(1.1); transform: scale(1.1);
+  50% { transform: scale(1.1);
   }
 
-  100% { -webkit-transform: scale(1.0); transform: scale(1.0);
+  100% { transform: scale(1.0);
   }
 }
 
 @-webkit-keyframes wiggle {
-  20% { -webkit-transform: translateX(-2px); transform: translateX(-2px);
+  20% { transform: translateX(-2px);
   }
 
-  40% { -webkit-transform: translateX(2px); transform: translateX(2px);
+  40% { transform: translateX(2px);
   }
 
-  60% { -webkit-transform: translateX(-1px); transform: translateX(-1px);
+  60% { transform: translateX(-1px);
   }
 
-  80% { -webkit-transform: translateX(1px); transform: translateX(1px);
+  80% { transform: translateX(1px);
   }
 }
 
 @keyframes wiggle {
-  20% { -webkit-transform: translateX(-2px); transform: translateX(-2px);
+  20% { transform: translateX(-2px);
   }
 
-  40% { -webkit-transform: translateX(2px); transform: translateX(2px);
+  40% { transform: translateX(2px);
   }
 
-  60% { -webkit-transform: translateX(-1px); transform: translateX(-1px);
+  60% { transform: translateX(-1px);
   }
 
-  80% { -webkit-transform: translateX(1px); transform: translateX(1px);
+  80% { transform: translateX(1px);
   }
 }
 
-.ani-cursor-blink { -webkit-animation: cursor-blink 1.2s linear 0s infinite; animation: cursor-blink 1.2s linear 0s infinite;
+.ani-cursor-blink { -webkit-animation: cursor-blink 1.2s steps(2) infinite; animation: cursor-blink 1.2s steps(2) infinite;
 }
 
 .mixin\:ani-heartbeat { -webkit-animation-play-state: paused; animation-play-state: paused; -webkit-animation-fill-mode: both; animation-fill-mode: both;
@@ -1252,6 +1308,10 @@ ul.list-custom-inline li + li::before {
 
 .mixin\:ani-heartbeat-lg:hover { -webkit-animation-play-state: running; animation-play-state: running; -webkit-animation: heartbeat-lg 0.2s ease-in; animation: heartbeat-lg 0.2s ease-in;
 }
+
+/* .mixin\:ani-wiggle { @apply ani-pause ani-fill-both; } */
+
+/* .mixin\:ani-wiggle:hover { @apply ani-play ani-wiggle; } */
 
 .t-width { transition: width 0.5s ease-in-out;
 }
@@ -1347,14 +1407,6 @@ ul.list-custom-inline li + li::before {
     max-width: 24rem;
   }
 
-  .sm\:min-w-page {
-    min-width: 600px;
-  }
-
-  .sm\:overflow-auto {
-    overflow: auto;
-  }
-
   .sm\:text-sm {
     font-size: 0.875rem;
   }
@@ -1368,6 +1420,16 @@ ul.list-custom-inline li + li::before {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+
+  /* .col-count-2 { column-count: 2; } */
+
+  /* .col-gap-sm { column-gap: 3rem; } */
+
+  /* .clip-none { clip-path: none; } */
+
+  /* .clip-circle { clip-path: circle(50% at 50% 50%); } */
+
+  /* .shape-parallelogram { shape-outside: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%); } */
 }
 
 @media (min-width: 768px) {
@@ -1400,12 +1462,20 @@ ul.list-custom-inline li + li::before {
     margin-right: 0.5rem;
   }
 
-  .md\:mr-6 {
-    margin-right: 1.5rem;
+  .md\:ml-6 {
+    margin-left: 1.5rem;
+  }
+
+  .md\:text-justify {
+    text-align: justify;
   }
 
   .md\:text-base {
     font-size: 1rem;
+  }
+
+  .md\:whitespace-no-wrap {
+    white-space: nowrap;
   }
 
   .md\:w-1\/3 {
@@ -1414,14 +1484,19 @@ ul.list-custom-inline li + li::before {
 
   .md\:bg-img-pattern { background-image: url("/static/images/timmons-logo-pattern.png");
   }
+
+  /* .col-count-2 { column-count: 2; } */
+
+  /* .col-gap-sm { column-gap: 3rem; } */
+
+  /* .clip-none { clip-path: none; } */
+
+  /* .clip-circle { clip-path: circle(50% at 50% 50%); } */
+
+  /* .shape-parallelogram { shape-outside: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%); } */
 }
 
 @media (min-width: 1024px) {
-
-  .lg\:px-48 {
-    padding-left: 12rem;
-    padding-right: 12rem;
-  }
 
   .lg\:text-base {
     font-size: 1rem;
@@ -1434,6 +1509,16 @@ ul.list-custom-inline li + li::before {
   .lg\:w-1\/4 {
     width: 25%;
   }
+
+  /* .col-count-2 { column-count: 2; } */
+
+  /* .col-gap-sm { column-gap: 3rem; } */
+
+  /* .clip-none { clip-path: none; } */
+
+  /* .clip-circle { clip-path: circle(50% at 50% 50%); } */
+
+  /* .shape-parallelogram { shape-outside: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%); } */
 }
 
 @media (min-width: 1280px) {
@@ -1445,6 +1530,16 @@ ul.list-custom-inline li + li::before {
   .xl\:items-center {
     align-items: center;
   }
+
+  /* .col-count-2 { column-count: 2; } */
+
+  /* .col-gap-sm { column-gap: 3rem; } */
+
+  /* .clip-none { clip-path: none; } */
+
+  /* .clip-circle { clip-path: circle(50% at 50% 50%); } */
+
+  /* .shape-parallelogram { shape-outside: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%); } */
 }
 
 @media (min-width: 500px) {
@@ -1461,7 +1556,13 @@ ul.list-custom-inline li + li::before {
     flex-shrink: 0;
   }
 
-  .xs\:mr-6 {
-    margin-right: 1.5rem;
-  }
+  /* .col-count-2 { column-count: 2; } */
+
+  /* .col-gap-sm { column-gap: 3rem; } */
+
+  /* .clip-none { clip-path: none; } */
+
+  /* .clip-circle { clip-path: circle(50% at 50% 50%); } */
+
+  /* .shape-parallelogram { shape-outside: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%); } */
 }
